tests/transpiler/x/zig/break_continue.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/break_continue.zig:7:13: error: remainder division with 'i64' and 'comptime_int': signed integers and floats must use @rem or @mod
